Fast game scene (#26)
* update

* GameScene: perf, restore fixes, loading debounce, standard orbit camera (#25)

* perf: cache TooltipDetails by element identity in createMetadata

createMetadata() iterated 6500 blocks calling tooltipResolver.resolve()
per position. CandidateCacheKey included (x,y,z), causing 6499 unique
keys that all missed the 512-entry LRU cache. Each call did tier loops
and reflection tree walks.

Add IdentityHashMap<IStructureElement, TooltipDetails> cache keyed by
element instance identity at the createMetadata() loop level. Same
element instance shared across positions hits cache on first lookup.

Also strip SURVIVAL_CONSTRUCT_OPTION from initial buildPreviewSelection
in doScan() to avoid pointless survival→creative fallback on fake
GuidebookLevel.

Before: doScan bindingMs=3028, createMetadata.resolveTotalMs=2887
After:  doScan bindingMs=121,  createMetadata.resolveTotalMs=5

* fix: channel slider disappears and stops responding after cache restore

Three root causes in the StructureLib scene cache restore path:

1. Slider disappears on page revisit:
   captureInitialStructureStateIfAbsent() ran before ANALYZE_LIMITS
   completed, caching 0-channel metadata. Force re-capture after
   ANALYZE_LIMITS enriches metadata with channel data.

2. Slider drag has no effect after cache restore:
   resolvePreviewBindingKey() uses object identity (==) to match
   binding to runtime state. After restoreInto() recreates bindings,
   the old identity check fails. Add rebindPreviewRuntimeStates()
   to update state.binding references after restore.
   Also restore hasRebuildRecipe from baseRequest.

3. Slider drag causes lag spikes:
   captureInitialStructureStateIfAbsent() was forced on every
   BUILD_SELECTION result (248ms for 6500 blocks). Only force
   re-capture on ANALYZE_LIMITS; BUILD results use the original
   null-guarded capture path.

Add build deduplication: skip queueStructureLibSelectionBuild when
buildPending is already true. Resubmit after