@@ -1,7 +1,6 @@
 package com.hfstudio.guidenh.guide.internal.structure;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -23,7 +22,7 @@ public class GuideStructureFileStore {
         Path path = workingRoot.resolve(
             Paths.get("config", "guidenh", "structures", sanitizePrefix(prefix) + "-" + UUID.randomUUID() + ".snbt"));
         Files.createDirectories(path.getParent());
-        Files.write(path, structureText.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, structureText);
         return path.normalize();
     }
 
